--- a/style.css
+++ b/style.css
@@ -20,6 +20,29 @@ img{
     height:420px;
     border-radius: 40px;
 }
+.contact-card {
+    padding-top: 32px;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 1em;
+    margin-bottom: 1em;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
+}
+.contact-link {
+    color : black;
+}
+.contact-section {
+    padding-top: 10px;
+   
+}
+#contact-section-1{
+    padding-top: 150px;
+}
+#contact-card-3{
+    margin-bottom: 25px; 
+}
 .homeImageContainer{
     background-size: cover;
     margin:2em;
